<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    tools:context=".activities.MainListActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/stepToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:id="@+id/llDetailsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDetailsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/step_and_video"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/recipe_step_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/llStepSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/step_text_description_margin"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibStepDetailPrevious"
                style="@style/ImageButtonNextPrevious"
                android:contentDescription="@string/image_button_previous"
                app:srcCompat="@android:drawable/ic_media_previous" />

            <TextView
                android:id="@+id/tvStepDetailNumber"
                style="@style/StepTextDescriptionLabel"
                tools:text="Step 2" />

            <ImageButton
                android:id="@+id/ibStepDetailNext"
                style="@style/ImageButtonNextPrevious"
                android:contentDescription="@string/image_button_next"
                app:srcCompat="@android:drawable/ic_media_next" />

        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>