<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cvInfoIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ingredients_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIngredients"
                style="@style/IngredientsTextBody"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/widget_text_click_to_add_margin"
                android:gravity="center"
                android:text="@string/click_to_add_to_widget"
                android:textSize="@dimen/widget_text_click_to_add" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvDetailsRecipeSteps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/recycler_view_padding" />


</LinearLayout>