...
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_list_imageview">main_list_imageview</string>
    <string name="error_loading_recipes">Error loading recipes, check connection!</string>
    <string name="servings">servings</string>
    <string name="introduction">Introduction</string>
    <string name="step">Step</string>
    <string name="image_button_previous">image_button_previous</string>
    <string name="image_button_next">image_button_next</string>
    <string name="exo_play_image_button">exo_play_image_button</string>
    <string name="exo_pause_image_button">exo_pause_image_button</string>
    <string name="favourites">Favourites</string>
    <string name="added_to_favourites">added to favourites</string>
    <string name="removed_from_favourites">removed from favourites</string>
    <string name="network">Network</string>
    <string name="recipe">Recipe</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
...
